--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "npm run lint --workspaces --if-present"
   },
   "devDependencies": {
+    "knip": "^5.82.1",
     "typescript": "~5.9.3"
   }
 }
