--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "lint": "npm run lint --workspaces --if-present"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "knip": "^5.82.1",
+    "globals": "^16.5.0",
+    "typescript-eslint": "^8.46.4",
+    "eslint": "^9.39.1",
     "typescript": "~5.9.3"
   }
 }
