--- a/.github/workflows/upa-grade-pr-check.yml
+++ b/.github/workflows/upa-grade-pr-check.yml
@@ -39,3 +39,23 @@ jobs:
             exit 1
           fi
 
+      - name: Run skill health thresholds
+        run: npm run upa:health:check
+
+      - name: Calibration threshold summary (warn-only)
+        run: |
+          set +e
+          npm run upa:calibration:check
+          EXIT_CODE=$?
+          if [ $EXIT_CODE -ne 0 ]; then
+            echo "Calibration thresholds exceeded (warn-only in PR check)."
+          fi
+          exit 0
+
+      - name: Upload skill health artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: upa-skill-health-pr
+          path: |
+            docs/UPA_SKILL_HEALTH.json
+            docs/UPA_CALIBRATION_BASELINE.json
