--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "upa:grades:static": "npx tsx packages/engine/scripts/runSkillGradesStatic.ts p6-static-v1 docs/UPA_SKILL_GRADES_STATIC.json",
     "upa:grades:dynamic": "npx tsx packages/engine/scripts/runSkillGradesDynamic.ts 300 80 heuristic ALL docs/UPA_SKILL_GRADES_DYNAMIC.json",
     "upa:grades:drift": "npx tsx packages/engine/scripts/runSkillGradeDrift.ts docs/UPA_SKILL_GRADES_STATIC.json docs/UPA_SKILL_GRADES_DYNAMIC.json docs/UPA_SKILL_GRADE_DRIFT.json",
-    "upa:grades:all": "npm run upa:grades:static && npm run upa:grades:dynamic && npm run upa:grades:drift"
+    "upa:grades:all": "npm run upa:grades:static && npm run upa:grades:dynamic && npm run upa:grades:drift",
+    "upa:health": "npx tsx packages/engine/scripts/runSkillHealthReport.ts 80 60 docs/UPA_SKILL_HEALTH_2026-02-09.json -1 -1",
+    "upa:health:ci": "npx tsx packages/engine/scripts/runSkillHealthReport.ts 80 60 docs/UPA_SKILL_HEALTH.json -1 -1",
+    "upa:health:check": "npx tsx packages/engine/scripts/runSkillHealthReport.ts 80 60 docs/UPA_SKILL_HEALTH.json 0 0 2",
+    "upa:calibration": "npx tsx packages/engine/scripts/runUpaCalibration.ts 300 80 heuristic docs/UPA_CALIBRATION_BASELINE.json",
+    "upa:calibration:check": "npx tsx packages/engine/scripts/runUpaCalibration.ts 300 80 heuristic docs/UPA_CALIBRATION_BASELINE.json \"\" 1",
+    "upa:matrix": "npx tsx packages/engine/scripts/runUpaMatchupMatrix.ts 30 60 docs/UPA_PVP_MATCHUP_MATRIX.json heuristic"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
