--- a/.github/workflows/upa-grade-nightly.yml
+++ b/.github/workflows/upa-grade-nightly.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Generate PvP matchup matrix
         run: npm run upa:matrix
 
+      - name: Generate evaluator baselines
+        run: npm run upa:evaluators
+
       - name: Upload grade artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -53,3 +56,4 @@ jobs:
             docs/UPA_SKILL_HEALTH.json
             docs/UPA_CALIBRATION_BASELINE.json
             docs/UPA_PVP_MATCHUP_MATRIX.json
+            docs/UPA_EVALUATOR_BASELINES.json
