--- a/.github/workflows/upa-grade-pr-check.yml
+++ b/.github/workflows/upa-grade-pr-check.yml
@@ -42,15 +42,8 @@ jobs:
       - name: Run skill health thresholds
         run: npm run upa:health:check
 
-      - name: Calibration threshold summary (warn-only)
-        run: |
-          set +e
-          npm run upa:calibration:check
-          EXIT_CODE=$?
-          if [ $EXIT_CODE -ne 0 ]; then
-            echo "Calibration thresholds exceeded (warn-only in PR check)."
-          fi
-          exit 0
+      - name: Calibration threshold gate
+        run: npm run upa:calibration:gate
 
       - name: Upload skill health artifact
         uses: actions/upload-artifact@v4
