--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,22 +1,26 @@
 {
-    "name": "@hop/engine",
-    "version": "1.0.0",
-    "type": "module",
-    "main": "./src/index.ts",
-    "types": "./src/index.ts",
-    "exports": {
-        ".": "./src/index.ts",
-        "./*": "./src/*.ts"
-    },
-    "scripts": {
-        "build": "tsc",
-            "test": "vitest run",
-            "validate-replay": "node ./scripts/validateReplay.js",
-            "check-rng-parity": "node ./scripts/checkRngParity.js"
-    },
-    "dependencies": {},
-    "devDependencies": {
-        "typescript": "~5.9.3",
-        "vitest": "^1.1.4"
-    }
+  "name": "@hop/engine",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./*": "./src/*.ts"
+  },
+  "scripts": {
+    "build": "tsc",
+    "test": "vitest run",
+    "validate-replay": "npx tsx ./scripts/validateReplay.ts",
+    "validate-replay-smoke": "npx tsx ./scripts/validateReplay.ts ./scripts/fixtures/replay.smoke.json",
+    "replay-parity-gate": "npx tsx ./scripts/runReplayParityGate.ts",
+    "check-rng-parity": "node ./scripts/checkRngParity.js",
+    "validate-state-mirror": "npx tsx ./scripts/validateStateMirror.ts",
+    "validate-state-mirror-sample": "npx tsx ./scripts/validateStateMirror.ts ./scripts/fixtures/mirror.engine.sample.json ./scripts/fixtures/mirror.ui.sample.json"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "typescript": "~5.9.3",
+    "vitest": "^1.1.4"
+  }
 }
