feat(engine): add ACAE pilot runtime and strict audit suite

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -34,6 +34,11 @@
     "report-enemy-ai-turn-mode-diff": "npx tsx ./scripts/reportEnemyAiTurnModeDiff.ts",
     "check-deprecated-constants-usage": "npx tsx ./scripts/checkDeprecatedConstantsUsage.ts",
     "check-script-imports": "npx tsx ./scripts/checkScriptImports.ts && npm run check-deprecated-constants-usage",
+    "acae:lethality": "npx tsx ./scripts/runAcaeLethalitySimulation.ts",
+    "acae:hardening": "npx tsx ./scripts/runAcaeHardeningAudit.ts",
+    "acae:cleanse-path": "npx tsx ./scripts/runAcaeCleansePathAudit.ts",
+    "acae:annihilation-stability": "npx tsx ./scripts/runAcaeAnnihilationStability.ts",
+    "test:acae:strict": "npx tsx ./scripts/runAcaeStrict.ts --strict",
     "validate-replay": "npx tsx ./scripts/validateReplay.ts",
     "validate-replay-smoke": "npx tsx ./scripts/validateReplay.ts ./scripts/fixtures/replay.smoke.json",
     "replay-parity-gate": "npx tsx ./scripts/runReplayParityGate.ts",
