UPA tuning tranche closure: strict gates green, baselines updated, docs synced

--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "upa:skills:migration:audit": "npx tsx packages/engine/scripts/runSkillMigrationAudit.ts docs/UPA_SKILL_MIGRATION_AUDIT.json",
     "upa:trinity:report": "npx tsx packages/engine/scripts/runTrinityContributionReport.ts 24 50 docs/UPA_TRINITY_CONTRIBUTIONS.json",
     "upa:trinity:profiles:compare": "npx tsx packages/engine/scripts/runTrinityProfileComparison.ts 12 40 docs",
+    "upa:tuning:baseline": "npx tsx packages/engine/scripts/runUpaArchetypeSweep.ts 300 80 heuristic sp-v1-default artifacts/upa/UPA_TUNING_BASELINE.json calibration",
+    "upa:tuning:candidate": "npx tsx packages/engine/scripts/runUpaArchetypeSweep.ts 300 80 heuristic sp-v1-balance artifacts/upa/UPA_TUNING_CANDIDATE.json calibration",
+    "upa:tuning:gate": "npx tsx packages/engine/scripts/runUpaTuningGate.ts artifacts/upa/UPA_TUNING_BASELINE.json artifacts/upa/UPA_TUNING_CANDIDATE.json 0.30 ASSASSIN 0.30 1 artifacts/upa/UPA_TUNING_GATE_REPORT.json",
+    "golden:rebaseline:fingerprints": "npx tsx packages/engine/scripts/rebaselineGoldenFingerprints.ts",
     "mvp:baseline": "npx tsx packages/engine/scripts/runMvpBaseline.ts artifacts/upa/MVP_SEEDS_mvp-v1.json 80 heuristic artifacts/upa/MVP_BASELINE_mvp-v1.json",
     "mvp:replay:gate": "npx tsx packages/engine/scripts/runReplayParityGate.ts mvp-replay-gate-seed 1",
     "mvp:timeline:audit": "npx tsx packages/engine/scripts/runTimelineAudit.ts 20 80 artifacts/upa/UPA_TIMELINE_AUDIT.json 2400 0",
